@@ -256,4 +256,12 @@ public interface ITestNGMethod extends Cloneable {
   default CustomAttribute[] getAttributes() {
     return new CustomAttribute[]{};
   }
+
+  /**
+   * @return - An {@link IDataProviderMethod} for a data provider powered test method and
+   * <code>null</code> otherwise.
+   */
+  default IDataProviderMethod getDataProviderMethod() {
+    return null;
+  }
 }
